fix: enable cross-origin requests for Render deployment